fixtures/cell_env/invalid/06_version_weakening.sea
Cell "VersionWeaken"
    @profile "python-agent-v1"

Tool "uv" version "0.9.8"
